batchai: review fix result